# int24

./: CMakeLists.txt  README.md  main.cpp
types/utility/: conversion.hpp  integer.hpp  operators.hpp
